[gd_scene load_steps=6 format=3 uid="uid://k1ipgbfjhoex"]

[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="1_wf5ce"]
[ext_resource type="Texture2D" uid="uid://dlsidcxns8i4o" path="res://Graphics/MainMenu_bg.png" id="2_au53e"]
[ext_resource type="Theme" uid="uid://c85e41jmw6i0p" path="res://Menus/NormalButtonTheme.tres" id="2_qp85b"]
[ext_resource type="Script" path="res://Menus/MainMenuBg.gd" id="3_7pwpf"]
[ext_resource type="FontFile" uid="uid://hcb3an67qg80" path="res://Menus/UnderTheFeetOfMany4.otf" id="3_8g8yg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wf5ce")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -360.0
offset_top = -240.0
offset_right = -196.0
offset_bottom = -69.0001
scale = Vector2(11.8958, 6.38123)
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -144.0
offset_right = -124.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.735, 1.735)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 2
size_flags_vertical = 4

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
theme_override_fonts/font = ExtResource("3_8g8yg")
text = "New Hike"

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
text = "Embark"

[node name="ChangeDifficulty" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
toggle_mode = false
alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "Relaxed"
popup/item_0/id = 0
popup/item_1/text = "Foddian"
popup/item_1/id = 1
popup/item_2/text = "Permadeath"
popup/item_2/id = 2

[node name="Go to Display Menu" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
text = "Change Visuals"

[node name="Go to Audio Menu" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
text = "Change Tunes"

[node name="Quit Game" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_qp85b")
text = "Quit"

[node name="MainMenuBg" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(639.5, 351)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("2_au53e")
script = ExtResource("3_7pwpf")

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ChangeDifficulty" to="." method="_on_change_difficulty_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Go to Display Menu" to="." method="_on_go_to_display_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Go to Audio Menu" to="." method="_on_go_to_audio_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
